# Role-Eater

./: Cargo.toml
src/: main.rs
src/client_events/: guild_create.rs  guild_update.rs  interaction_create.rs  message.rs  mod.rs  presence_update.rs  user_update.rs  voice_state_update.rs
