[package]
name = "role_eater"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
postgres = "0.19.10"
serde = { version = "1.0.219", features = ["derive"] }
serenity = "0.12.4"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.13"
